--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                             through
                             our clay pots. Inspired by the teachings of Feng Shui, we have created a collection of items
                             that help fill your home with positive energy and create a space for prosperity.</p>
+
                     </div>
                     <div class="banner__content-btn">
                         <button class="banner__btn">Show</button>
@@ -117,6 +118,208 @@
                 </div>
             </div>
         </section>
+        <section class="bestsellers">
+            <div class="container">
+
+                <div class="bestsellers__wrap">
+                    <div class="bestsellers__content">
+                        <h3 class="bestsellers__title">Bestsellers</h3>
+                    </div>
+
+                    <div class="bestsellers__desc">
+                        <p class="bestsellers__desc-slogan">
+                            Discover the most popular clay pots that attract the attention of our customers.
+                        </p>
+                        <p class="bestsellers__text-slogan">
+                            These products perfectly combine Feng Shui aesthetics, quality, and style.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="bestsellers__grid">
+
+                    <div class="card">
+                        <div class="card__img">
+                            <div class="discount">
+                                <p class="discount__percentage">20%</p>
+                            </div>
+                            <div class="card__favorite"> <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M39.5 25V39C39.5 39.5304 39.2891 40.039 38.9141 40.4141C38.539 40.7891 38.0304 41 37.5 41H22.5C21.9696 41 21.461 40.7891 21.0859 40.4141C20.7109 40.039 20.5 39.5304 20.5 39V25H39.5Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg> <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M35.4004 20C38.5459 20.0002 40.9999 22.4437 41 25.5938C41 27.5246 40.1369 29.3607 38.4131 31.4678C36.6783 33.5882 34.178 35.8595 31.0684 38.6768L31.0674 38.6777L30 39.6475L28.9326 38.6777L28.9316 38.6768L26.7158 36.6602C24.6193 34.7335 22.888 33.0581 21.5869 31.4678C19.8631 29.3607 19 27.5246 19 25.5938C19.0001 22.4437 21.4541 20.0002 24.5996 20C26.3856 20 28.1163 20.836 29.2412 22.1455L30 23.0283L30.7588 22.1455C31.8837 20.836 33.6144 20 35.4004 20Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg> </div>
+                            <img src="./img/card1.png" alt="">
+                        </div>
+                        <div class="card__content">
+                            <p class="card-title">Clay Pot "Midori"</p>
+                            <p class="card-info">Size: Small</p>
+                            <p class="card-info">Color: Beige</p>
+                        </div>
+                        <div class="card__add">
+                            <p class="card__price">Price: 15 USD</p>
+                            <button class="card__btn">Buy</button>
+                        </div>
+                    </div><div class="card">
+                        <div class="card__img">
+                            <div class="discount">
+                                <p class="discount__percentage">New</p>
+                            </div>
+                            <div class="card__favorite"> <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M39.5 25V39C39.5 39.5304 39.2891 40.039 38.9141 40.4141C38.539 40.7891 38.0304 41 37.5 41H22.5C21.9696 41 21.461 40.7891 21.0859 40.4141C20.7109 40.039 20.5 39.5304 20.5 39V25H39.5Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg> <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M35.4004 20C38.5459 20.0002 40.9999 22.4437 41 25.5938C41 27.5246 40.1369 29.3607 38.4131 31.4678C36.6783 33.5882 34.178 35.8595 31.0684 38.6768L31.0674 38.6777L30 39.6475L28.9326 38.6777L28.9316 38.6768L26.7158 36.6602C24.6193 34.7335 22.888 33.0581 21.5869 31.4678C19.8631 29.3607 19 27.5246 19 25.5938C19.0001 22.4437 21.4541 20.0002 24.5996 20C26.3856 20 28.1163 20.836 29.2412 22.1455L30 23.0283L30.7588 22.1455C31.8837 20.836 33.6144 20 35.4004 20Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg> </div>
+                            <img src="./img/card2.png" alt="">
+                        </div>
+                        <div class="card__content">
+                            <p class="card-title">Clay Pot "Kyoto"</p>
+                            <p class="card-info">Size: Medium</p>
+                            <p class="card-info">Color: Beige and Dark Gray</p>
+                        </div>
+                        <div class="card__add">
+                            <p class="card__price">Price: 40 USD</p>
+                            <button class="card__btn">Buy</button>
+                        </div>
+                    </div><div class="card">
+                        <div class="card__img">
+                            <div class="discount">
+                                <p class="discount__percentage">10%</p>
+                            </div>
+                            <div class="card__favorite"> <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M39.5 25V39C39.5 39.5304 39.2891 40.039 38.9141 40.4141C38.539 40.7891 38.0304 41 37.5 41H22.5C21.9696 41 21.461 40.7891 21.0859 40.4141C20.7109 40.039 20.5 39.5304 20.5 39V25H39.5Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg> <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M35.4004 20C38.5459 20.0002 40.9999 22.4437 41 25.5938C41 27.5246 40.1369 29.3607 38.4131 31.4678C36.6783 33.5882 34.178 35.8595 31.0684 38.6768L31.0674 38.6777L30 39.6475L28.9326 38.6777L28.9316 38.6768L26.7158 36.6602C24.6193 34.7335 22.888 33.0581 21.5869 31.4678C19.8631 29.3607 19 27.5246 19 25.5938C19.0001 22.4437 21.4541 20.0002 24.5996 20C26.3856 20 28.1163 20.836 29.2412 22.1455L30 23.0283L30.7588 22.1455C31.8837 20.836 33.6144 20 35.4004 20Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg> </div>
+                            <img src="./img/card3.png" alt="">
+                        </div>
+                        <div class="card__content">
+                            <p class="card-title">Clay Pot "Haru"</p>
+                            <p class="card-info">Size: Small</p>
+                            <p class="card-info">Color: Beige</p>
+                        </div>
+                        <div class="card__add">
+                            <p class="card__price">Price: 10 USD</p>
+                            <button class="card__btn">Buy</button>
+                        </div>
+                    </div><div class="card">
+                        <div class="card__img">
+                            <div class="discount">
+                                <p class="discount__percentage">40%</p>
+                            </div>
+                            <div class="card__favorite"> <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M39.5 25V39C39.5 39.5304 39.2891 40.039 38.9141 40.4141C38.539 40.7891 38.0304 41 37.5 41H22.5C21.9696 41 21.461 40.7891 21.0859 40.4141C20.7109 40.039 20.5 39.5304 20.5 39V25H39.5Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg> <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M35.4004 20C38.5459 20.0002 40.9999 22.4437 41 25.5938C41 27.5246 40.1369 29.3607 38.4131 31.4678C36.6783 33.5882 34.178 35.8595 31.0684 38.6768L31.0674 38.6777L30 39.6475L28.9326 38.6777L28.9316 38.6768L26.7158 36.6602C24.6193 34.7335 22.888 33.0581 21.5869 31.4678C19.8631 29.3607 19 27.5246 19 25.5938C19.0001 22.4437 21.4541 20.0002 24.5996 20C26.3856 20 28.1163 20.836 29.2412 22.1455L30 23.0283L30.7588 22.1455C31.8837 20.836 33.6144 20 35.4004 20Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg> </div>
+                            <img src="./img/card4.png" alt="">
+                        </div>
+                        <div class="card__content">
+                            <p class="card-title">Clay Pot "Rinko"</p>
+                            <p class="card-info">Size: Large</p>
+                            <p class="card-info">Color: Dark Gray</p>
+                        </div>
+                        <div class="card__add">
+                            <p class="card__price">Price: 200 USD</p>
+                            <button class="card__btn">Buy</button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__img">
+                            <div class="discount">
+                                <p class="discount__percentage">90%</p>
+                            </div>
+                            <div class="card__favorite"> <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M39.5 25V39C39.5 39.5304 39.2891 40.039 38.9141 40.4141C38.539 40.7891 38.0304 41 37.5 41H22.5C21.9696 41 21.461 40.7891 21.0859 40.4141C20.7109 40.039 20.5 39.5304 20.5 39V25H39.5Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg><svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M35.4004 20C38.5459 20.0002 40.9999 22.4437 41 25.5938C41 27.5246 40.1369 29.3607 38.4131 31.4678C36.6783 33.5882 34.178 35.8595 31.0684 38.6768L31.0674 38.6777L30 39.6475L28.9326 38.6777L28.9316 38.6768L26.7158 36.6602C24.6193 34.7335 22.888 33.0581 21.5869 31.4678C19.8631 29.3607 19 27.5246 19 25.5938C19.0001 22.4437 21.4541 20.0002 24.5996 20C26.3856 20 28.1163 20.836 29.2412 22.1455L30 23.0283L30.7588 22.1455C31.8837 20.836 33.6144 20 35.4004 20Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg>
+                            </div>
+                            <img src="./img/card5.png" alt="">
+                        </div>
+                        <div class="card__content">
+                            <p class="card-title">Clay Pot "Shizuoka"</p>
+                            <p class="card-info">Size: Large</p>
+                            <p class="card-info">Color: Beige</p>
+                        </div>
+                        <div class="card__add">
+                            <p class="card__price">Price: 60 USD</p>
+                            <button class="card__btn">Buy</button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__img">
+                            <div class="discount">
+                                <p class="discount__percentage">New</p>
+                            </div>
+                            <div class="card__favorite"> <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M39.5 25V39C39.5 39.5304 39.2891 40.039 38.9141 40.4141C38.539 40.7891 38.0304 41 37.5 41H22.5C21.9696 41 21.461 40.7891 21.0859 40.4141C20.7109 40.039 20.5 39.5304 20.5 39V25H39.5Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg>
+                                <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" class="favorite">
+                                    <rect width="60" height="60" fill="#F9F8F4" />
+                                    <path
+                                        d="M35.4004 20C38.5459 20.0002 40.9999 22.4437 41 25.5938C41 27.5246 40.1369 29.3607 38.4131 31.4678C36.6783 33.5882 34.178 35.8595 31.0684 38.6768L31.0674 38.6777L30 39.6475L28.9326 38.6777L28.9316 38.6768L26.7158 36.6602C24.6193 34.7335 22.888 33.0581 21.5869 31.4678C19.8631 29.3607 19 27.5246 19 25.5938C19.0001 22.4437 21.4541 20.0002 24.5996 20C26.3856 20 28.1163 20.836 29.2412 22.1455L30 23.0283L30.7588 22.1455C31.8837 20.836 33.6144 20 35.4004 20Z"
+                                        stroke="#242424" stroke-width="2" />
+                                </svg>
+                            </div>
+                            <img src="./img/card6.png" alt="">
+                        </div>
+                        <div class="card__content">
+                            <p class="card-title">Clay Pot "Kawa"</p>
+                            <p class="card-info">Size: Small</p>
+                            <p class="card-info">Color: Beige</p>
+                        </div>
+                        <div class="card__add">
+                            <p class="card__price">Price: 30 USD</p>
+                            <button class="card__btn">Buy</button>
+                        </div>
+                    </div>
 
 
 </body>
