add about and footer

--- a/index.html
+++ b/index.html
@@ -319,7 +319,73 @@
                             <p class="card__price">Price: 30 USD</p>
                             <button class="card__btn">Buy</button>
                         </div>
+                    </div></div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <div class="about__wrap">
+                    <div class="about__content">
+                        <h4 class="about__title">About us</h4>
                     </div>
+
+                    <div class="about__desc">
+                        <p class="about__desc-slogan">
+                            Welcome to our store, where tradition and modern style meet in every pot.
+                        </p>
+                        <p class="about__text-slogan">
+                            We are a team inspired by the philosophy of Feng Shui, creating unique clay pots that help
+                            fill your home with harmony and tranquility. Each of our products is crafted with special
+                            attention to detail and made from high-quality materials, allowing us to offer you items
+                            that are not only beautiful but also beneficial for your home.
+                        </p>
+                        <div class="about__img">
+                            <img src="./img/about.png" alt="">
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container footer__wrap">
+            <nav class="footer__nav">
+                <ul class="footer__nav-list">
+                    <li class="footer__nav-list-item">
+                        <a href="#" class="footer__nav-list-item-link">Home</a>
+                    </li>
+                    <li class="footer__nav-list-item">
+                        <a href="#" class="footer__nav-list-item-link">Shop</a>
+                    </li>
+                    <li class="footer__nav-list-item">
+                        <a href="#" class="footer__nav-list-item-link">About</a>
+                    </li>
+                    <li class="footer__nav-list-item">
+                        <a href="#" class="footer__nav-list-item-link">Contact</a>
+                    </li>
+                </ul>
+                <div class="footer__content">
+                    <a href="#" class="follow">FOLLOW US</a>
+                    <ul class="footer__nav-icons">
+                        <li class="footer__nav-icons_item">
+                            <a href="#" class="footer__nav-icons_item-link">
+                                <img src="./img/inst.svg" alt="">
+                            </a>
+                        </li>
+                        <li class="footer__nav-icons_item">
+                            <a href="#" class="footer__nav-icons_item-link">
+                                <img src="./img/ww123.svg" alt="">
+                            </a>
+                        </li>
+                        <li class="footer__nav-icons_item">
+                            <a href="#" class="footer__nav-icons_item-link">
+                                <img src="./img/x1212.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </footer>
 
 
 </body>
