--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     </li>
                 </ul>
                 <div class="footer__content">
-                    <a href="#" class="follow">FOLLOW US</a>
+                    <a href="#" class="follow__title">FOLLOW US</a>
                     <ul class="footer__nav-icons">
                         <li class="footer__nav-icons_item">
                             <a href="#" class="footer__nav-icons_item-link">
@@ -386,8 +386,5 @@
             </nav>
         </div>
     </footer>
-
-
 </body>
-
 </html>
